--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </div>
                                 <div class="large-12 columns">
                                     <button class="button radius" id="filter" onclick="filterDay()">Filter</button>
-                                    <button id="clearFilter" class="button radius secondary">
+                                    <button id="clearFilter" class="button radius secondary" onclick="location.reload();">
                                         Clear Filter
                                     </button>
                                 </div>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <!-- table --> 
-                    <table id="example" class="display" data-page-length="10" data-order="[[ 1, &quot;asc&quot; ]]">
+                    <table id="tableProject" class="display" data-page-length="7" data-order="[[ 1, &quot;asc&quot; ]]">
                         <thead>
                             <tr>
                                 <th class="text-left">ID</th>
